fixed login/register button not showing

--- a/client/src/views/auth/AuthView.css
+++ b/client/src/views/auth/AuthView.css
@@ -128,17 +128,17 @@
 }
 
 .login__active {
-    opacity: 100%;
+    opacity: 1;
     z-index: 1;
 }
 
 .login__inactive {
-    opacity: 0%;
+    opacity: 0;
     z-index: 0;
 }
 
 .register__active {
-    opacity: 100%;
+    opacity: 1;
     z-index: 1;
 }
 
